
Advanced Circuits upgraded to processing units in Tiberium Control Node.

Removed Chemical Plant and Electric Engine Unit from Growth Accelerator.

Copper plate exchanged for plastic in Tiberium Armour.

Added Iron Pipe to Tiberium Armour.

---------------------------------------------------------------------------------------------------

Feb 2 (Again)

Automated tiberium resitance application to armour. Compatibility with other mods is (hopefully) assured.


Feb

Added an option to choose how much ore is created per growth cycle. All recipes automatically adjust to changed value of tib. (Recipe multiplier, basically.)

Added option to change how much each tib ore is worth. Recipes that use tib ore auto adjust.

Removed vanilla Centrifuge unlock from Tiberium Processing Tech.

Reduced the Logistics science pack cost of Tiberium Processing.

Reduced mining area on Tiberium Control Node to 100x100.

Refinery recipes times decreased to 2.5 seconds, from 6.

Fixed damage hitbox of tib ore. No more walking over fields with no damage.

Nodes now do some damage over the whole field, and a little beyond the max growth radius.

Centrifuges are now fast replace with each other.

Halved the mining time and depletion speed of the Tib Spike node.

Linked Tib Spike node richness to normal node richness.

Change direct ore output to be based on the centrifuge outputs.

Bob's integrated.

Tiberium derived Nuclear Fuel cells. Stack size 5, because you don't want too many of them in one place, lest bad things happen.

Liquid Tiberium Seed missile.

Node values reduced by 5x, and 2 million base.

Adjusted Nuclear fuel from tib recipe, so it doesn't require more than double the liquid tib energy equivalent.

Overhauled damage system, so now nodes use landmines. Which means they damage biters too.

Spaced out the ore transitioning, so it doesn't cap out at 1000.

Increased node growth radius. Testing showed we can go higher without adversly affecting UPS.