@@ -1,0 +1,2 @@
+LSlib.recipe.setResultProbability("iron-growth-credit", "growth-credit", 1)
+LSlib.recipe.setResultCount("iron-growth-credit", "growth-credit", 1)
